chore: bump version to 2.1.5 and finalize UI refactoring